<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_round">

    <TextView
        android:id="@+id/tvAdapterDialogCryptoName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/HOLDER_CRYPTO_NAME"
        android:gravity="center|center_vertical"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAdapterDialogCryptoSymbolTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="end|center_vertical"
        android:text="@string/SYMBOL_DOTS"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/tvAdapterDialogCryptoSymbolText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAdapterDialogCryptoName" />

    <TextView
        android:id="@+id/tvAdapterDialogCryptoSymbolText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="5dp"
        android:text="@string/CONTENT"
        android:gravity="start|center_vertical"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvAdapterDialogCryptoSymbolTitle"
        app:layout_constraintEnd_toStartOf="@+id/tvAdapterDialogCryptoHigh24hTitle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/tvAdapterDialogCryptoSymbolTitle"
        app:layout_constraintTop_toTopOf="@+id/tvAdapterDialogCryptoSymbolTitle" />

    <TextView
        android:id="@+id/tvAdapterDialogCryptoHigh24hTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/HIGH_24H_DOTS"
        android:gravity="end|center_vertical"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvAdapterDialogCryptoSymbolText"
        app:layout_constraintEnd_toStartOf="@+id/tvAdapterDialogCryptoHigh24hText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@+id/tvAdapterDialogCryptoSymbolText"
        app:layout_constraintTop_toTopOf="@+id/tvAdapterDialogCryptoSymbolText" />

    <TextView
        android:id="@+id/tvAdapterDialogCryptoHigh24hText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/CONTENT"
        android:gravity="start|center_vertical"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvAdapterDialogCryptoHigh24hTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@+id/tvAdapterDialogCryptoHigh24hTitle"
        app:layout_constraintTop_toTopOf="@+id/tvAdapterDialogCryptoHigh24hTitle" />

    <TextView
        android:id="@+id/tvAdapterDialogCryptoMarketCapRankTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/MARKET_CAP_RANK_DOTS"
        android:gravity="end|center_vertical"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/tvAdapterDialogCryptoMarketCapRankText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAdapterDialogCryptoHigh24hTitle" />

    <TextView
        android:id="@+id/tvAdapterDialogCryptoMarketCapRankText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="5dp"
        android:text="@string/CONTENT"
        android:gravity="start|center_vertical"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvAdapterDialogCryptoMarketCapRankTitle"
        app:layout_constraintEnd_toStartOf="@+id/tvAdapterDialogCryptoLow24hTitle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/tvAdapterDialogCryptoMarketCapRankTitle"
        app:layout_constraintTop_toTopOf="@+id/tvAdapterDialogCryptoMarketCapRankTitle" />

    <TextView
        android:id="@+id/tvAdapterDialogCryptoLow24hTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/LOW_24H_DOTS"
        android:gravity="end|center_vertical"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvAdapterDialogCryptoMarketCapRankText"
        app:layout_constraintEnd_toStartOf="@+id/tvAdapterDialogCryptoLow24hText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@+id/tvAdapterDialogCryptoMarketCapRankText"
        app:layout_constraintTop_toTopOf="@+id/tvAdapterDialogCryptoMarketCapRankText" />

    <TextView
        android:id="@+id/tvAdapterDialogCryptoLow24hText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/CONTENT"
        android:gravity="start|center_vertical"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvAdapterDialogCryptoLow24hTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@+id/tvAdapterDialogCryptoLow24hTitle"
        app:layout_constraintTop_toTopOf="@+id/tvAdapterDialogCryptoLow24hTitle" />

    <TextView
        android:id="@+id/tvAdapterDialogCryptoPriceChangePercentage24hTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/PRICE_CHANGE_PERCENTAGE_24H_DOTS"
        android:gravity="end|center_vertical"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/tvAdapterDialogCryptoPriceChangePercentage24hText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAdapterDialogCryptoLow24hTitle" />

    <TextView
        android:id="@+id/tvAdapterDialogCryptoPriceChangePercentage24hText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="5dp"
        android:text="@string/CONTENT"
        android:gravity="start|center_vertical"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvAdapterDialogCryptoPriceChangePercentage24hTitle"
        app:layout_constraintEnd_toStartOf="@+id/tvAdapterDialogCryptoCurrentPriceTitle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/tvAdapterDialogCryptoPriceChangePercentage24hTitle"
        app:layout_constraintTop_toTopOf="@+id/tvAdapterDialogCryptoPriceChangePercentage24hTitle" />

    <TextView
        android:id="@+id/tvAdapterDialogCryptoCurrentPriceTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/CURRENT_PRICE_DOTS"
        android:gravity="end|center_vertical"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvAdapterDialogCryptoPriceChangePercentage24hText"
        app:layout_constraintEnd_toStartOf="@+id/tvAdapterDialogCryptoCurrentPriceText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@+id/tvAdapterDialogCryptoPriceChangePercentage24hText"
        app:layout_constraintTop_toTopOf="@+id/tvAdapterDialogCryptoPriceChangePercentage24hText" />

    <TextView
        android:id="@+id/tvAdapterDialogCryptoCurrentPriceText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/CONTENT"
        android:gravity="start|center_vertical"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvAdapterDialogCryptoCurrentPriceTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@+id/tvAdapterDialogCryptoCurrentPriceTitle"
        app:layout_constraintTop_toTopOf="@+id/tvAdapterDialogCryptoCurrentPriceTitle" />

    <Button
        android:id="@+id/btnAdapterDialogCryptoClose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CLOSE"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAdapterDialogCryptoCurrentPriceTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>